# azfn-python-http-trigger-v1

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: build.yml  check-quality.yml  check-security.yml  deploy.yml  main.yml  run-tests.yml
docker/: Dockerfile  docker-compose.yml  template.env  wait-azfn.sh
function_apps/: host.json
function_apps/azfn_http_example/: function.json  main.py
function_apps/azfn_orchestrator/: function.json  main.py
function_apps/azfn_task/: function.json  main.py
function_apps/azfn_trigger_orchestrator/: function.json  main.py
tests/integration/: test_http_example.py
tests/unit/: test_py_project.py
