[tool.poetry]
name = "py-project"
version = "0.1.0"
description = ""
authors = ["David Mugisha"]

[tool.poetry.dependencies]
python = "^3.8"
azure-functions = "^1.11.2"
azure-functions-durable = "^1.1.6"

[tool.poetry.group.dev.dependencies]
"testing.postgresql" = "^1.3.0"
flake8 = "^5.0.4"
black = "^22.10.0"
bandit = "^1.7.4"
pre-commit = "^2.20.0"
isort = "^5.10.1"
safety = "^2.3.1"
flake8-formatter-junit-xml = "^0.0.6"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
junit_family = "xunit1"

[tool.coverage.run]
source=["py_project/*"]
omit=["tests/*","venv/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "docker"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
